fixed cards into same height (weird hover layout change, text is not well aligned)

--- a/CSS/product_list.css
+++ b/CSS/product_list.css
@@ -86,11 +86,15 @@ article {
 
 .product {
   box-shadow: var(--shadow);
+  position: relative;
+  /* height: 380px; */
+}
+
+.product > a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
-  /* height: 380px; */
+  justify-content: space-between;
 }
 
 article.onSale .productPrice {
@@ -115,7 +119,7 @@ article.onSale::before {
   margin: 0.5em;
   border-radius: 3em;
   top: 0;
-  right: 10;
+  right: 1;
   z-index: 1;
 }
 
@@ -127,27 +131,27 @@ article.onSale::before {
   display: none;
 }
 
-article:hover a.productLink {
+/* article:hover a.productLink {
   display: block;
   background: var(--button-color);
   width: 100%;
   text-align: center;
   padding: 1rem;
   box-shadow: var(--shadow);
-}
+} */
 
-article:hover #img_02 {
+.product:hover #img_02 {
   display: block;
 }
 
-article:hover #img_01 {
+.product:hover #img_01 {
   display: none;
 }
 
 button.heart {
   position: absolute;
-  top: 0.4em;
-  right: 1em;
+  top: 0.2em;
+  right: 0.2em;
   background: url(../Assets/heart_btn_black_white-bg.svg) no-repeat;
   width: 2.5rem;
   height: 2.5rem;
@@ -174,10 +178,11 @@ button.heart {
   margin-bottom: 1rem;
 }
 
-.product > h3 {
+.product h3 {
   margin: 0.5vw;
   font-size: 0.9rem;
   letter-spacing: var(--spacing);
+  text-align: center;
 }
 
 .productTitle {
@@ -196,8 +201,8 @@ button.heart {
   }
 
   button.heart {
-    width: 1.2rem;
-    height: 1.2rem;
+    width: 2rem;
+    height: 2rem;
   }
 
   .product > h3 {
